# stremio-my-addon

./: README.md
stremio-addon-python-template/: LICENSE  README.md  makefile  pyproject.toml
stremio-addon-python-template/makefiles/: build.mk  ci.mk  clean.mk  common.mk  dev.mk  install.mk  test.mk
stremio-addon-python-template/src/stremio_addon_python_template/: __init__.py  env_settings.py  main.py  movie.py
stremio-addon-python-template/tests/: test_addon.py
